objects/CCMI__Milestone_Assignment__c.object
<CustomObject>
    <description>Used for capturing assignments to tasks in the Cloud Coach Milestones app</description>
    <fields>
        <fullName>CCMI__Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated (System)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Milestone_Task__c</fullName>
        <description>Detail record to a Milestone Task record</description>
        <inlineHelpText>The milestone task that this assignment is related to</inlineHelpText>
        <label>Task</label>
        <referenceTo>CCMI__Milestone_Task__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Milestone_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCMI__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestone_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Milestone Assignment (Deprecated)</label>
    <nameField>
        <displayFormat>MTA{00000000}</displayFormat>
        <label>Assignment Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Assignments (Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>